# vk-layer-for-rust

./: .gitattributes  .gitignore  .mdformat.toml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  PSScriptAnalyzerSettings.psd1  Pipfile  README.md  meson.format  pyproject.toml  taplo.toml
.github/scripts/windows/: download_and_decompress_llvm.ps1  grant_access.ps1  run_e2e_tests.ps1
.github/workflows/: postsubmit.yml  presubmit-comment.yml  presubmit.yml
coverage-Linux/: lcov.info
coverage-Linux/llvm-cov/html/: index.html
coverage-Windows/: lcov.info
coverage-Windows/llvm-cov/html/: index.html
doc-Linux/: help.html  search-index.js  settings.html
doc-Linux/VkLayer_vendor_rust_example_hello_world/: all.html  index.html
doc-Linux/ci/: all.html  fn.create_shield_badge.html  fn.main.html  index.html  struct.Cli.html  struct.CoverageReport.html  struct.CoverageReportData.html  struct.CoverageReportDataTotals.html  struct.CoverageStats.html  struct.ShieldBadge.html
doc-Linux/codegen/: all.html  fn.create_file_all.html  fn.current_year.html  fn.generate_vulkan_layer_header_binding.html  fn.guess_python_command.html  fn.main.html  fn.run_vulkan_layer_genvk.html  index.html  struct.Cli.html  struct.GenvkArgs.html  type.Task.html
doc-Linux/list_files/: all.html  fn.main.html  index.html
doc-Linux/src/VkLayer_vendor_rust_example_hello_world/: impl.rs.html  lib.rs.html
doc-Linux/src/ci/: ci.rs.html
doc-Linux/src/codegen/: codegen.rs.html
doc-Linux/src/list_files/: main.rs.html
doc-Linux/src/vulkan_layer/: bindings.rs.html  global_simple_intercept.rs.html  layer_trait.rs.html  lazy_collection.rs.html  lib.rs.html  test_utils.rs.html  unstable_api.rs.html  vk_utils.rs.html
doc-Linux/src/vulkan_layer_macros/: details.rs.html  dummy.rs.html  lib.rs.html
doc-Linux/src/vulkan_layer_scripts/: lib.rs.html
doc-Linux/src/xtask/: main.rs.html
doc-Linux/vulkan_layer/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  enum.Extension.html  enum.LayerResult.html  enum.LayerVulkanCommand.html  fn.fill_vk_out_array.html  index.html  macro.declare_introspection_queries.html  struct.ExtensionProperties.html  struct.Global.html  struct.LayerManifest.html  struct.StubDeviceInfo.html  struct.StubGlobalHooks.html  struct.StubInstanceInfo.html  struct.VulkanBaseInStructChain.html  struct.VulkanBaseOutStructChain.html  trait.DeviceHooks.html  trait.DeviceInfo.html  trait.GlobalHooks.html  trait.GlobalHooksInfo.html  trait.InstanceHooks.html  trait.InstanceInfo.html  trait.Layer.html  type.VkLayerDeviceLink.html  type.VkLayerInstanceLink.html
doc-Linux/vulkan_layer/test_utils/: index.html  struct.ArcDel.html  struct.Del.html  struct.MockDeviceInfo.html  struct.MockDrop.html  struct.MockGlobalHooksInfo.html  struct.MockInstanceInfo.html  struct.MockTestLayer.html  struct.Tag.html  struct.TestGlobal.html  struct.TestGlobalBuilder.html  struct.TestLayer.html  struct.VkLayerDeviceCreateInfo.html  struct.VkLayerFunction.html  struct.VkLayerInstanceCreateInfo.html  trait.LayerManifestExt.html  trait.TestLayerMock.html  trait.TestLayerTag.html  type.VkLayerDeviceLink.html
doc-Linux/vulkan_layer_macros/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  index.html  macro.declare_introspection_queries.html
doc-Linux/vulkan_layer_scripts/: all.html  index.html
doc-Linux/xtask/: all.html  fn.main.html  index.html
doc-Windows/: help.html  search-index.js  settings.html
doc-Windows/VkLayer_vendor_rust_example_hello_world/: index.html
doc-Windows/ci/: all.html  fn.create_shield_badge.html  fn.main.html  index.html  struct.Cli.html  struct.CoverageReport.html  struct.CoverageReportData.html  struct.CoverageReportDataTotals.html  struct.CoverageStats.html  struct.ShieldBadge.html
doc-Windows/codegen/: all.html  fn.create_file_all.html  fn.current_year.html  fn.generate_vulkan_layer_header_binding.html  fn.guess_python_command.html  fn.main.html  fn.run_vulkan_layer_genvk.html  index.html  struct.Cli.html  struct.GenvkArgs.html  type.Task.html
doc-Windows/list_files/: all.html  fn.main.html  index.html
doc-Windows/vulkan_layer/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  enum.Extension.html  enum.LayerResult.html  enum.LayerVulkanCommand.html  fn.fill_vk_out_array.html  index.html  macro.declare_introspection_queries.html  struct.ExtensionProperties.html  struct.Global.html  struct.LayerManifest.html  struct.StubDeviceInfo.html  struct.StubGlobalHooks.html  struct.StubInstanceInfo.html  struct.VulkanBaseInStructChain.html  struct.VulkanBaseOutStructChain.html  trait.DeviceHooks.html  trait.DeviceInfo.html  trait.GlobalHooks.html  trait.GlobalHooksInfo.html  trait.InstanceHooks.html  trait.InstanceInfo.html  trait.Layer.html  type.VkLayerDeviceLink.html  type.VkLayerInstanceLink.html
doc-Windows/vulkan_layer_macros/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  index.html  macro.declare_introspection_queries.html
doc-Windows/vulkan_layer_scripts/: all.html  index.html
doc-Windows/xtask/: all.html  fn.main.html  index.html
e2e-deps/: meson.build
e2e-deps/subprojects/: mesa.wrap
e2e-deps/subprojects/llvm/: meson.build  meson_options.txt
e2e-deps/subprojects/llvm/subprojects/: llvm-downloaded-windows.wrap
e2e-deps/subprojects/llvm/subprojects/packagefiles/llvm/: meson.build
e2e-deps/subprojects/vulkan-runtime/subprojects/packagefiles/vulkan-runtime/: meson.build
e2e-test/: Cargo.toml
e2e-test/src/: main.rs
e2e-test/tests/: e2e_test.rs
scripts/: codegen.rs  powershell_format.ps1  vulkan_layer_genvk.py
scripts/list_files/: main.rs  mod.rs
vulkan-layer/src/: layer_trait.rs  lib.rs  test_utils.rs
vulkan-layer/tests/: integration_test.rs  layer_hooked_commands_override_tests.rs
xtask/: Cargo.toml
xtask/src/: ci.rs  codegen.rs  common.rs  dependency.rs  fmt.rs  main.rs
(+187 files in other folders)
