[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bindgen = "0.65.1"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
ignore = "0.4.20"
log = "0.4.17"
petgraph = "0.6.4"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
xshell = "0.2.5"
