[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bindgen = "0.65.1"
clap = { version = "4.4.0", features = ["derive"] }
console = "0.15.7"
ctrlc = "3.4.0"
diff = "0.1.13"
env_logger = "0.10.0"
fixedbitset = "0.4.2"
ignore = "0.4.20"
indicatif = "0.17.6"
indicatif-log-bridge = "0.2.2"
log = "0.4.17"
log-panics = "2.1.0"
once_cell = "1.18.0"
petgraph = "0.6.4"
rayon = "1.7.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.47"
wait-timeout = "0.2.0"
xshell = "0.2.5"
